--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
   "bugs": {
     "url": "https://github.com/Jameskmonger/courtroom/issues"
   },
-  "homepage": "https://github.com/Jameskmonger/courtroom#readme"
+  "homepage": "https://github.com/Jameskmonger/courtroom#readme",
+  "dependencies": {
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-jasmine": "^0.9.2",
+    "grunt-template-jasmine-requirejs": "^0.2.3",
+    "jasmine": "^2.4.1"
+  }
 }
