Corrected build structure

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -13,6 +13,7 @@
         "noLib": false,
         "preserveConstEnums": true,
         "suppressImplicitAnyIndexErrors": true,
+        "rootDir": "../src/",
         "outDir": "../build/"
     },
     "filesGlob": [
