--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "requirejs": "^2.1.22"
   },
   "devDependencies": {
-    "karma": "^0.13.15"
+    "karma": "^0.13.15",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.6",
+    "karma-requirejs": "^0.2.2"
   }
 }
