Karma/Jasmine/Require environemtn set up at last

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "requirejs": "^2.1.22"
   },
   "devDependencies": {
+    "jasmine": "^2.4.1",
     "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.3.6",
