--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jasmine": "^2.4.1",
     "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.2",
+    "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.6",
     "karma-requirejs": "^0.2.2",
     "karma-spec-reporter": "0.0.23"
