--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Validation made easy!",
   "main": " ",
   "scripts": {
-    "test": " "
+    "test": "karma start"
   },
   "repository": {
     "type": "git",
