--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,4 @@ before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - "npm install karma-phantomjs-launcher"
+  - "tsc -p /src/"
