--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,5 @@ before_install:
   - "npm install karma-phantomjs-launcher"
   - "npm install -g typescript"
   - "tsc src/**/*.ts --module amd --outDir build/"
+after_success:
+  - coveralls
