--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "^0.5.3",
+    "karma-coveralls": "^1.1.2",
     "karma-jasmine": "^0.3.6",
     "karma-requirejs": "^0.2.2",
     "karma-spec-reporter": "0.0.23"
