--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -22,7 +22,10 @@
     ],
     "files": [
         "courtroom/courtroom.ts",
-        "courtroom/defendant.ts"
+        "courtroom/defendant.ts",
+        "courtroom/juries/jury.ts",
+        "courtroom/juries/notjury.ts",
+        "courtroom/lawcontainer.ts"
     ],
     "atom": {
         "rewriteTsconfig": true
