--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ before_install:
   - "sh -e /etc/init.d/xvfb start"
   - "npm install karma-phantomjs-launcher"
   - "npm install -g typescript"
+  - "tsc spec/courtroom/**/*.spec.ts spec/courtroom/**/**/*.spec.ts amd"
   - "tsc src/**/*.ts src/**/**/*.ts --module amd --outDir build/"
