--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ before_install:
   - "npm install -g tsd"
   - "tsd install"
   - "tsc src/**/*.ts src/**/**/*.ts --module amd --outDir build/"
-  - "tsc spec/courtroom/*.spec.ts spec/courtroom/**/*.spec.ts --module amd"
+  - "tsc spec/courtroom/*.spec.ts spec/courtroom/**/*.spec.ts --module amd --moduleResolution classic"
