--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es5",
         "module": "amd",
-        "moduleResolution": "node",
+        "moduleResolution": "classic",
         "isolatedModules": false,
         "jsx": "react",
         "experimentalDecorators": true,
