--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,4 @@ before_install:
   - "npm install -g typescript"
   - "npm install -g tsd"
   - "tsd install"
-  - "tsc src/**/*.ts src/**/**/*.ts --module amd --outDir build/"
-  - "tsc spec/courtroom/*.spec.ts spec/courtroom/**/*.spec.ts --module amd --moduleResolution classic"
+  - "tsc spec/courtroom/*.spec.ts spec/courtroom/**/*.spec.ts --module amd --moduleResolution classic --outDir test-build"
