--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -12,7 +12,8 @@
         "removeComments": true,
         "noLib": false,
         "preserveConstEnums": true,
-        "suppressImplicitAnyIndexErrors": true
+        "suppressImplicitAnyIndexErrors": true,
+        "outDir": "../test-build/"
     },
     "filesGlob": [
         "**/*.ts",
