Started string.contains jury

--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -25,6 +25,7 @@
         "courtroom/defendant.spec.ts",
         "courtroom/juries/isjury.spec.ts",
         "courtroom/juries/notjury.spec.ts",
+        "courtroom/juries/string.contains.spec.ts",
         "courtroom/laws/stringlawcontainer.spec.ts"
     ],
     "atom": {
