--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -25,8 +25,7 @@
         "courtroom/defendant.spec.ts",
         "courtroom/juries/isjury.spec.ts",
         "courtroom/juries/notjury.spec.ts",
-        "courtroom/juries/string.contains.spec.ts",
-        "courtroom/laws/stringlawcontainer.spec.ts"
+        "courtroom/juries/string.contains.spec.ts"
     ],
     "atom": {
         "rewriteTsconfig": true
