--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -26,7 +26,9 @@
         "courtroom/juries/isjury.ts",
         "courtroom/juries/jury.ts",
         "courtroom/juries/notjury.ts",
-        "courtroom/juries/string.contains.jury.ts"
+        "courtroom/juries/string.contains.jury.ts",
+        "courtroom/juries/string.maxLength.jury.ts",
+        "courtroom/lawbook.ts"
     ],
     "atom": {
         "rewriteTsconfig": true
