Added string.minLength spec

--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -26,7 +26,8 @@
         "courtroom/juries/isjury.spec.ts",
         "courtroom/juries/notjury.spec.ts",
         "courtroom/juries/string.contains.spec.ts",
-        "courtroom/juries/string.maxLength.spec.ts"
+        "courtroom/juries/string.maxLength.spec.ts",
+        "courtroom/juries/string.minLength.spec.ts"
     ],
     "atom": {
         "rewriteTsconfig": true
