All tests are now passing for min length

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -28,6 +28,7 @@
         "courtroom/juries/notjury.ts",
         "courtroom/juries/string.contains.jury.ts",
         "courtroom/juries/string.maxLength.jury.ts",
+        "courtroom/juries/string.minLength.jury.ts",
         "courtroom/lawbook.ts"
     ],
     "atom": {
