--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "courtroom",
-  "version": "1.0.0",
+  "version": "0.5.0",
   "description": "Validation made easy!",
-  "main": " ",
-  "scripts": {
-    "test": "karma start"
-  },
+  "main": "build/courtroom.js",
+  "scripts": { },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Jameskmonger/courtroom.git"
@@ -13,7 +11,7 @@
   "keywords": [
     "Validation"
   ],
-  "author": "James Monger",
+  "author": "James Monger <jameskmonger@hotmail.co.uk> (http://jamesmonger.com)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Jameskmonger/courtroom/issues"
