Define tests in npm package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.5.0",
   "description": "Validation made easy!",
   "main": "build/courtroom.js",
-  "scripts": { },
+  "scripts": {
+	"test": "karma start"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Jameskmonger/courtroom.git"
