--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ node_js:
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
+  - "npm install karma"
+  - "npm install phantomjs"
   - "npm install karma-phantomjs-launcher"
   - "npm install -g typescript"
   - "npm install -g tsd"
