Installed karma-phantomjs-launcher

--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "gulp": "^3.9.0",
     "gulp-typescript": "^2.10.0",
     "jasmine": "^2.4.1",
+    "jasmine-core": "^2.4",
     "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "^0.5.3",
     "karma-coveralls": "^1.1.2",
     "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
     "karma-requirejs": "^0.2.2",
     "karma-spec-reporter": "0.0.23",
-  	"phantomjs": "^1.9.19",
-  	"jasmine-core": "^2.4"
+    "phantomjs": "^1.9.19"
   }
 }
