--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Validation made easy!",
   "main": "build/courtroom.js",
   "scripts": {
-    "test": "karma start"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
