--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -22,12 +22,12 @@
     ],
     "files": [
         "courtroom/defendant.ts",
-        "courtroom/laws/islaw.ts",
+        "courtroom/laws/is.ts",
         "courtroom/laws/law.ts",
-        "courtroom/laws/notlaw.ts",
-        "courtroom/laws/string.contains.law.ts",
-        "courtroom/laws/string.maxLength.law.ts",
-        "courtroom/laws/string.minLength.law.ts",
+        "courtroom/laws/not.ts",
+        "courtroom/laws/contains.ts",
+        "courtroom/laws/maxLength.ts",
+        "courtroom/laws/minLength.ts",
         "courtroom/lawbook.ts",
         "index.ts"
     ],
