--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Jameskmonger/courtroom#readme",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-mocha": "^2.2.0",
     "gulp-typescript": "^2.10.0",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4",
