--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Jameskmonger/courtroom#readme",
   "devDependencies": {
+    "expect.js": "^0.3.1",
     "gulp": "^3.9.0",
     "gulp-mocha": "^2.2.0",
     "gulp-typescript": "^2.10.0",
