--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -26,6 +26,7 @@
         "courtroom/laws/contains.ts",
         "courtroom/laws/is.ts",
         "courtroom/laws/law.ts",
+        "courtroom/laws/matches.ts",
         "courtroom/laws/maxLength.ts",
         "courtroom/laws/minLength.ts",
         "courtroom/laws/not.ts",
