--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-requirejs": "^0.2.2",
     "karma-spec-reporter": "0.0.23",
+    "modulink": "^1.1.0",
     "phantomjs": "^1.9.19",
     "requirejs": "^2.1.22"
   },
