--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "gulp test",
-    "test:build:src": "node node_modules/typescript/bin/tsc --project src --outDir test-build/src --module commonjs"
+    "test:build": "node node_modules/typescript/bin/tsc --project spec --outDir test-build --module commonjs"
   },
   "repository": {
     "type": "git",
