--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "karma-spec-reporter": "0.0.23",
     "modulink": "^1.1.0",
     "phantomjs": "^1.9.19",
-    "requirejs": "^2.1.22"
+    "requirejs": "^2.1.22",
+    "rimraf": "^2.5.2"
   },
   "tonicExampleFilename": "example.js"
 }
