--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "gulp test",
     "test:build": "node node_modules/typescript/bin/tsc --project spec --outDir test-build --module commonjs",
     "test:run": "node node_modules/mocha/bin/mocha test-build/spec/**/*.spec.js",
-    "test:link:create": "node node_modules/modulink/modulink --name courtroom --target test-build/src"
+    "test:link:create": "node node_modules/modulink/modulink --name courtroom --target test-build/src",
+    "test:link:remove": "node node_modules/rimraf/bin.js node_modules/courtroom"
   },
   "repository": {
     "type": "git",
