--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:build": "node node_modules/typescript/bin/tsc --project spec --module commonjs",
     "test:run": "node node_modules/mocha/bin/mocha spec/**/*.spec.js",
     "test:link:create": "node node_modules/modulink/modulink --name courtroom --target src",
-    "test:link:remove": "node node_modules/rimraf/bin.js node_modules/courtroom"
+    "test:link:remove": "node node_modules/rimraf/bin.js node_modules/courtroom",
+    "test:prune": "node node_modules/rimraf/bin.js src/**/*.js spec/**/*.js"
   },
   "repository": {
     "type": "git",
