--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:run": "node node_modules/mocha/bin/mocha spec/**/*.spec.js",
     "test:link:create": "node node_modules/modulink/modulink --name courtroom --target src",
     "test:link:remove": "node node_modules/rimraf/bin.js node_modules/courtroom",
-    "test:prune": "node node_modules/rimraf/bin.js src/**/*.js spec/**/*.js"
+    "test:prune": "node node_modules/rimraf/bin.js src/*.js src/**/*.js spec/*.js spec/**/*.js"
   },
   "repository": {
     "type": "git",
