--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Validation made easy!",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test:build && npm run test:link:create && npm run test:run && npm run test:prune",
+    "test": "npm run test:link:create && npm run test:build && npm run test:run && npm run test:prune",
     "test:build": "node node_modules/typescript/bin/tsc --project spec --module commonjs",
     "test:run": "node node_modules/mocha/bin/mocha spec/**/*.spec.js",
     "test:link:create": "node node_modules/modulink/modulink --name courtroom --target src",
