--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-typescript": "^2.10.0",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4",
+    "mocha": "^2.4.5",
     "modulink": "^1.1.0",
     "rimraf": "^2.5.2"
   },
