--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ node_js:
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-  - "npm install -g typescript"
   - "npm install -g tsd"
-  - "npm install -g gulp"
   - "tsd install"
-script: gulp test
+script: npm test
