--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:link:create": "node node_modules/modulink/modulink --name courtroom --target src",
     "test:link:remove": "node node_modules/rimraf/bin.js node_modules/courtroom",
     "test:prune": "node node_modules/rimraf/bin.js src/*.js src/**/*.js spec/*.js spec/**/*.js",
-    "publish:build": "node node_modules/typescript/bin/tsc --project src --module commonjs --outDir ./"
+    "publish:build": "node node_modules/typescript/bin/tsc --project src --module commonjs --outDir ./",
+    "publish:prune": "node node_modules/rimraf/bin.js ./index.js ./courtroom"
   },
   "repository": {
     "type": "git",
