--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "prepublish": "npm run publish:build",
     "publish": "npm run publish:prune",
+    "publish:build": "node node_modules/typescript/bin/tsc --project src --module commonjs --outDir ./",
+    "publish:prune": "node node_modules/rimraf/bin.js ./index.js ./courtroom",
+
     "test": "npm run test:link:create && npm run test:build && npm run test:run && npm run test:prune",
     "test:build": "node node_modules/typescript/bin/tsc --project spec --module commonjs",
     "test:run": "node node_modules/mocha/bin/mocha spec/**/*.spec.js",
     "test:link:create": "node node_modules/modulink/modulink --name courtroom --target src",
     "test:link:remove": "node node_modules/rimraf/bin.js node_modules/courtroom",
-    "test:prune": "node node_modules/rimraf/bin.js src/*.js src/**/*.js spec/*.js spec/**/*.js",
-    "publish:build": "node node_modules/typescript/bin/tsc --project src --module commonjs --outDir ./",
-    "publish:prune": "node node_modules/rimraf/bin.js ./index.js ./courtroom"
+    "test:prune": "node node_modules/rimraf/bin.js src/*.js src/**/*.js spec/*.js spec/**/*.js"
   },
   "repository": {
     "type": "git",
